<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--    tools:context=".ui.features.login.LoginActivity"-->

    <EditText
        android:id="@+id/passwordTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="@+id/emailTxtView"
        app:layout_constraintStart_toStartOf="@+id/emailTxtView"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#FF5722"
        android:text="@string/login_a"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxtView" />


    <TextView
        android:id="@+id/hi_wecome_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="125dp"
        android:gravity="top"
        android:text="@string/welcome"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:textAppearance="@style/hi_wecome_b"-->

    <EditText
        android:id="@+id/emailTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterYourMail"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/food_planner"
        android:textColor="#999EA1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/createNewAccountTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewAccount"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailTxtView"
        app:layout_constraintStart_toStartOf="@+id/emailTxtView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"

        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordTxtView" />

</androidx.constraintlayout.widget.ConstraintLayout>