<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--    tools:context=".ui.features.register.RegisterActivity"-->


    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:gravity="top"
        android:text="@string/Create_an_account"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:textAppearance="@style/hi_wecome_b"-->

    <TextView
        android:id="@+id/connect_wit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:text="@string/plan_food"
        android:textColor="#7C0B0101"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/create_an_a"
        app:layout_constraintTop_toBottomOf="@+id/create_an_a" />
    <!--        android:textAppearance="@style/hello_again"-->

    <EditText
        android:id="@+id/signupEmailTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterYourMail"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordSignupTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="@+id/signupEmailTxtView"
        app:layout_constraintStart_toStartOf="@+id/signupEmailTxtView"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailTxtView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/orange"
        android:text="@string/SignUP"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignupTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordSignupTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignupTxtView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signupEmailTxtView"
        app:layout_constraintStart_toStartOf="@+id/signupEmailTxtView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordSignupTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordSignupTxtView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/already_account"
        android:textColor="#999EA1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Is_login"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>