<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63">

    <!-- Background Image -->

    <!-- Overlay View -->

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_backgroud"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="-34dp" />

    <View
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="166dp"
        android:layout_height="47dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FF5722"
        android:text="@string/SignUP"
        android:textColor="#F1EFEE"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/backgroundImage"
        app:layout_constraintStart_toStartOf="@+id/backgroundImage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/use_google"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_google"
        app:layout_constraintEnd_toEndOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="@+id/sign_up" />


    <Button
        android:id="@+id/tv_google"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FF5722"
        android:text="@string/signin"
        android:textColor="#F1EFEE"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#FF5722"
        android:text="@string/guest"
        android:textColor="#F1EFEE"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="@+id/tv_google"
        app:layout_constraintStart_toStartOf="@+id/tv_google" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/already_account"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Is_login"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>